tests/snapshots/render_snapshots__connection_management__connection_selector_with_multibyte_service_name.snap
---
source: tests/render_snapshots.rs
assertion_line: 651
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│               ╭ Select Connection ───────────────────────────╮               │
│               │>   本 番 デ ー タ ベ ー ス 接 続      from pg_service.c│               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ Enter Confirm  ↑/↓ Select  n New  Esc Close  ╯               │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Confirm  ↑/↓:Select  n:New  Esc:Close  q:Quit
